# uchos

./: .clang-format  .clang-tidy  .editorconfig  .gdbinit  .gitignore  .lldbinit  CLAUDE.md  OVMF_VARS.fd  README.md  UchLoaderPkg  compile_flags.txt  lint.sh  run_qemu.sh
.claude/: settings.json
.claude/commands/: analyze.md  implement.md  plan.md
.claude/rules/: kernel.md  tests.md  userland.md
.claude/skills/add-userland-command/: SKILL.md
.claude/skills/kernel-testing/: SKILL.md
.claude/skills/net-debug/: SKILL.md
.claude/skills/tutor/: SKILL.md
.github/workflows/: ci.yml  cmake-single-platform.yml  code_quality.yml
UchLoaderPkg/: Loader.inf  UchLoaderPkg.dec  UchLoaderPkg.dsc  elf.hpp  frame_buffer_conf.hpp  main.c  memory_map.hpp
apps/: Makefile.elfapp
apps/rpn/: rpn  rpn.cpp
docs/developer/: ipc-v2.md
kernel/: CMakeLists.txt  Makefile  acpi.hpp  asm_utils.asm  asm_utils.h  bit_utils.cpp  bit_utils.hpp  color.cpp  color.hpp  common.mk  config.hpp  elf.cpp  elf.hpp  error.hpp  font.cpp  font.hpp  libcxx_support.cpp  list.cpp  list.hpp  main.cpp  msr.hpp  newlib_support.c  panic.cpp  panic.hpp  point2d.cpp  point2d.hpp  screen.cpp  screen.hpp  system_event.hpp  system_event_queue.cpp  system_event_queue.hpp  system_logger.cpp  system_logger.hpp  types.hpp
kernel/command_line/: CMakeLists.txt  commands.cpp  commands.hpp  controller.cpp  controller.hpp
kernel/docs/: error_handling_api.md  namespace_migration_changes.md
kernel/file_system/: CMakeLists.txt  elf.hpp  fat.cpp  fat.hpp  file_descriptor.cpp  file_descriptor.hpp  file_info.cpp  file_info.hpp  path.cpp  path.hpp  task.cpp  task.hpp
kernel/file_system/fat/: common.hpp  directory.cpp  fat.cpp  fat.hpp  file.cpp  init.cpp  internal_common.hpp  utils.cpp
kernel/fs/: CMakeLists.txt  file_descriptor.cpp  file_descriptor.hpp  file_info.cpp  file_info.hpp  path.cpp  path.hpp
kernel/fs/fat/: CMakeLists.txt  directory.cpp  fat.cpp  fat.hpp  file.cpp  init.cpp  internal_common.hpp  utils.cpp
kernel/graphics/: CMakeLists.txt  Makefile  color.cpp  color.hpp  font.cpp  font.hpp  kernel_logger.cpp  kernel_logger.hpp  log.cpp  log.hpp  log_sink.cpp  log_sink.hpp  screen.cpp  screen.hpp  system_logger.cpp  system_logger.hpp  terminal.cpp  terminal.hpp
kernel/hardware/: CMakeLists.txt  keyboad.hpp  keyboard.cpp  keyboard.hpp  mm_register.hpp  pci.cpp  pci.hpp  serial.cpp  serial.hpp
kernel/hardware/usb/: CMakeLists.txt  array_map.hpp  descriptor.hpp  device.cpp  device.hpp  endpoint.cpp  endpoint.hpp  memory.cpp  memory.hpp  setup_stage_data.hpp  task.cpp  task.hpp
kernel/hardware/usb/class_driver/: CMakeLists.txt  base.cpp  base.hpp  hid.cpp  hid.hpp  keyboard.cpp  keyboard.hpp
kernel/hardware/usb/xhci/: CMakeLists.txt  context.cpp  context.hpp  device.cpp  device.hpp  device_manager.cpp  device_manager.hpp  port.cpp  port.hpp  registers.cpp  registers.hpp  ring.cpp  ring.hpp  speed.hpp  trb.cpp  trb.hpp  xhci.cpp  xhci.hpp
kernel/hardware/virtio/: CMakeLists.txt  blk.cpp  blk.hpp  device_descriptor.cpp  device_descriptor.hpp  net.cpp  net.hpp  pci.cpp  pci.hpp  virtio.cpp  virtio.hpp
kernel/interrupt/: CMakeLists.txt  Makefile  fault.cpp  fault.hpp  handler.asm  handler.cpp  handler.h  handler.hpp  handlers.cpp  handlers.hpp  idt.cpp  idt.hpp  irq_guard.hpp  routing.cpp  routing.hpp  vector.hpp
kernel/log/: CMakeLists.txt  log.cpp  log.hpp
kernel/memory/: CMakeLists.txt  Makefile  boot_allocator.hpp  bootstrap_allocator.cpp  bootstrap_allocator.hpp  buddy_system.cpp  buddy_system.hpp  custom_allocators.hpp  heap_debug.cpp  heap_debug.hpp  memory.asm  memory.cpp  memory.h  memory.hpp  page.cpp  page.hpp  page_operations.asm  page_operations.h  paging.cpp  paging.hpp  paging_utils.asm  paging_utils.h  pool.hpp  segment.cpp  segment.hpp  segment_utils.asm  segment_utils.h  segments_operations.asm  segments_operations.h  slab.cpp  slab.hpp  user.cpp  user.hpp
kernel/net/: CMakeLists.txt  arp.cpp  arp.hpp  checksum.cpp  checksum.hpp  ethernet.cpp  ethernet.hpp  host.cpp  host.hpp  icmp.cpp  icmp.hpp  ipv4.cpp  ipv4.hpp  packet_handler.cpp  packet_handler.hpp
kernel/shell/: commands.cpp  commands.hpp  controller.cpp  controller.hpp
kernel/syscall/: CMakeLists.txt  entry.asm  entry.h  handler.cpp  syscall.cpp  syscall.hpp
kernel/task/: CMakeLists.txt  Makefile  builtin.cpp  builtin.hpp  context.hpp  context_switch.asm  context_switch.h  ipc.cpp  ipc.hpp  message_queue.cpp  message_queue.hpp  task.cpp  task.hpp  task_manager.cpp  task_manager.hpp
kernel/tests/: CMakeLists.txt  framework.cpp  framework.hpp  macros.hpp  runner.cpp  runner.hpp  test_utils.hpp
kernel/tests/test_cases/: .clang-tidy  CMakeLists.txt  bit_utils_test.cpp  bit_utils_test.hpp  fd_test.cpp  fd_test.hpp  fs_test.cpp  fs_test.hpp  graphics_test.cpp  graphics_test.hpp  heap_debug_test.cpp  heap_debug_test.hpp  ipc_test.cpp  ipc_test.hpp  memory_test.cpp  memory_test.hpp  paging_test.cpp  paging_test.hpp  stdio_test.cpp  stdio_test.hpp  task_test.cpp  task_test.hpp  timer_test.cpp  timer_test.hpp  user_test.cpp  user_test.hpp  virtio_blk_test.cpp  virtio_blk_test.hpp
kernel/timers/: CMakeLists.txt  Makefile  acpi.cpp  acpi.hpp  local_apic.cpp  local_apic.hpp  timer.cpp  timer.hpp
libs/common/: endian.hpp  message.hpp  process_id.hpp  stat.hpp  types.hpp
libs/user/: console.cpp  console.hpp  file.cpp  file.hpp  ipc.cpp  ipc.hpp  keymap.cpp  keymap.hpp  newlib_support.c  print.cpp  print.hpp  start.cpp  syscall.asm  syscall.hpp  time.cpp  time.hpp
resource/: hello.txt
scripts/: build_kernel.sh  build_loader.sh  check_naming_full.sh  create_disk_img.sh  format_all.sh  run_kernel_tests.sh  setup_tap.sh
tools/: font_to_binary.go
userland/: Makefile.elf  newlib_support.c  syscall.asm  syscall.hpp
userland/commands/cat/: Makefile  main.cpp
userland/cp/: cp  cp.cpp
userland/fs/: common.hpp  globals.cpp  globals.hpp  main.cpp
userland/rpn/: rpn.cpp
userland/sandbox/: main.cpp
userland/shell/: command.cpp  command.hpp  main.cpp  shell.cpp  shell.hpp  terminal.cpp  terminal.hpp
(+20 files in other folders)
